--- a/header/public/index.html
+++ b/header/public/index.html
@@ -8,10 +8,10 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>React App</title>
+    <title>Amazon Search Bar</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="footer"></div>
+    <div id="header"></div>
   </body>
 </html>
