--- a/proxy/public/index.html
+++ b/proxy/public/index.html
@@ -8,11 +8,12 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>Amazon Search Bar</title>
+    <title>Proxy Server</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-  
+    <div id="header"></div>
+    <div id="footer"></div>
+    <script crossorigin src="http://localhost:3012/static/js/bundle.js"></script>
+    <script crossorigin src="http://localhost:3013/static/js/bundle.js"></script>
   </body>
 </html>
